--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -116,7 +116,7 @@ input, select, textarea {
 /* Type */
 
 	body {
-		background-color: #3f3363;
+		background-color: #203840;
 		color: rgba(255, 255, 255, 0.65);
 	}
 
